Bug 1082127 - Implement TabChild::SetDimensions so that window.moveTo/resizeTo work with e10s r=smaug